# rust-fast-linear-estimator

./: .gitignore  Cargo.toml  FastLinearEstimator.sln  README.md  build-arm.sh
.cargo/: config
csharp/FastLinearEstimator/: Class1.cs  ExpApprox.cs  FastLinearEstimator.csproj  LinearEstimator.cs  RustInterop.cs
csharp/FastLinearEstimator.Bench/: AlmostEqual.cs  EstimatorBench.cs  EstimatorBenchSizeVariations.cs  ExpBench.cs  FastLinearEstimator.Bench.csproj  Helpers.cs  Program.cs
csharp/FastLinearEstimator.Test/: BasicOperations.cs  ExpTests.cs  FastLinearEstimator.Test.csproj
fast-linear-estimator/: Cargo.toml  build.rs
fast-linear-estimator-interop/: Cargo.toml
fast-linear-estimator-interop/src/: lib.rs
fast-linear-estimator/benches/: benchmarks.rs
fast-linear-estimator/src/: common.rs  exp_approx.rs  exp_approx_arm.rs  exp_approx_avx.rs  exp_sleef_avx.rs  lib.rs  matrix.rs  matrix_arm.rs  matrix_avx.rs  matrix_test.rs
