[package]
name = "fast-linear-estimator"
version = "0.1.0"
authors = ["Michael Barber <60610888+mike-barber@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[dev-dependencies]
criterion = "0.3"
rand = "0.7.2"
rayon = "1.3.0"

[[bench]]
name = "benchmarks"
harness = false
